# schemas/swagger.json
@@ -15,7 +15,7 @@
   },
   "servers": [
     {
-      "url": "https://localhost:8081/menusapi/api/v1/"
+      "url": "http://localhost:8081/menusapi/api/v1/"
     }
   ],
   "paths": {
@@ -178,17 +178,7 @@
             "in": "body",
             "description": "user Signin information",
             "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "type": "string",
-                  "example": "totiu@gmail.com"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "toto123%%reat"
-                }
-              }
+              "$ref": "#/components/schemas/Login"
             }
           }
         ],
@@ -710,6 +700,27 @@
           "admin"
         ]
       },
+      "Login": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+.[a-zA-Z]{2,}$",
+            "description": "email of the user",
+            "default": "totiu@gmail.com"
+          },
+          "password": {
+            "type": "string",
+            "description": "password of the user",
+            "pattern": "^(?=.*[0-9]{3})(?=.*[!@#$%^&*]{2}).{13,}$",
+            "default": "toto123%%reat"
+          }
+        },
+        "required": [
+          "email",
+          "password"
+        ]
+      },
       "Menus": {
         "type": "object",
         "properties": {
@@ -747,6 +758,18 @@
         "type": "http",
         "scheme": "bearer",
         "bearerFormat": "JWT"
+      },
+      "OAuth2": {
+        "type": "oauth2",
+        "flows": {
+          "implicit": {
+            "authorizationUrl": "http://localhost:8081/oauth2/authorize",
+            "scopes": {
+              "read": "Grants read access",
+              "write": "Grants write access"
+            }
+          }
+        }
       }
     }
   }
